--- a/shop-front/src/app/components/basecategoryprice/basecategoryprice.component.html
+++ b/shop-front/src/app/components/basecategoryprice/basecategoryprice.component.html
@@ -1,16 +1,32 @@
 <div class="card p-3 gap-3">
-	@if (baseCategoryPrice !=null){
+	@if (isLoading){
+	loading.....
+	} @else {
+
+	@if(baseCategory != null){
 	<div class="d-flex align-items-center gap-3">
 		<span [style.width]="'fit-content'"> سعر عيار {{baseCategory.standard}} الحالي: </span>
 		<input aria-label="base Price input" [(ngModel)]="baseCategoryPrice" type="number" class="form-control"
 			[style.flex]="1" />
 	</div>
 	<div class="d-flex align-items-center justify-content-between">
-		<button class="col-3 btn btn-primary" (click)="changeBaseCategoryPrice()">حفظ</button>
-		<button class="col-3 btn btn-danger" (click)="resetBaseCategoryPrice()">إلغاء</button>
+		<button class="col-4 btn btn-primary" (click)="changeBaseCategoryPrice()">حفظ</button>
+		<button class="col-4 btn btn-danger" (click)="resetBaseCategoryPrice()">إلغاء</button>
 	</div>
 	} @else {
-	loading.....
+	<div class="alert alert-danger">بالرجاء إدخال العيار الاساسي</div>
+	<form class="d-flex flex-column gap-2" [formGroup]="newBaseCategoryForm" (ngSubmit)="onSubmit()">
+		@for(control of newBaseCategoryFormControlNames; track control){
+		<div class="d-flex align-items-center">
+			<label class="col-4" for="{{control.key}}"> {{control.name}} </label>
+			<input class="form-control" type="{{control.type}}" id="{{control.key}}"
+				formControlName="{{control.key}}" />
+		</div>
+		}
+		<button class="btn btn-primary" type="submit" [disabled]="newBaseCategoryForm.invalid">إدخال</button>
+	</form>
+	}
+
 	}
 
 </div>
