- Added Categories List
- Added Edit Category

--- a/shop-front/src/app/app.component.html
+++ b/shop-front/src/app/app.component.html
@@ -1,3 +1,5 @@
-<div class="w-100 h-100 p-3">
+<app-modal />
+<div class="w-100 h-100 p-3 d-flex flex-column gap-3">
   <app-basecategoryprice />
+  <app-categories-list />
 </div>
