--- a/shop-front/src/app/components/basecategoryprice/basecategoryprice.component.html
+++ b/shop-front/src/app/components/basecategoryprice/basecategoryprice.component.html
@@ -16,9 +16,9 @@
 	} @else {
 	<div class="alert alert-danger">بالرجاء إدخال العيار الاساسي</div>
 	<form class="d-flex flex-column gap-2" [formGroup]="newBaseCategoryForm" (ngSubmit)="onSubmit()">
-		@for(control of newBaseCategoryFormControlNames; track control){
+		@for(control of newBaseCategoryFormControlNames; track control.key){
 		<div class="d-flex align-items-center">
-			<label class="col-4" for="{{control.key}}"> {{control.name}} </label>
+			<label class="col-4" for="{{control.key}}"> {{control.displayName}} </label>
 			<input class="form-control" type="{{control.type}}" id="{{control.key}}"
 				formControlName="{{control.key}}" />
 		</div>
