--- a/shop-front/src/app/components/modal/addnewcategory/addnewcategory.component.html
+++ b/shop-front/src/app/components/modal/addnewcategory/addnewcategory.component.html
@@ -12,7 +12,7 @@
 			<div class="d-flex justify-content-between align-items-center">
 				<button class="btn btn-primary" type="submit" [disabled]="newCategoryForm.invalid">إضافة عيار
 					جديد</button>
-				<button class="btn btn-danger" (click)="onDismiss()">اغلاق الصفحة</button>
+				<button class="btn btn-danger" type="button" (click)="onDismiss()">اغلاق الصفحة</button>
 			</div>
 
 		</form>
