--- a/shop-front/src/app/components/categories-list/categories-list.component.html
+++ b/shop-front/src/app/components/categories-list/categories-list.component.html
@@ -1,24 +1,26 @@
-<div class="card d-flex flex-column gap-3 p-2">
-	<div class="d-flex align-items-center justify-content-between w-100">قائمة العيارات
+<div class="card d-flex flex-column flex-fill gap-3 p-2">
+	<div class="title d-flex align-items-center justify-content-between w-100">قائمة العيارات
 		<button class="btn btn-info" [disabled]="categories.length===0" (click)="addNewCategory()">إضافة عيار
 			جديد</button>
 	</div>
-	<table class="table table-hover table-striped table-bordered">
-		<thead>
-			<tr>
-				<th scope="col">الأسم</th>
-				<th scope="col">العيار</th>
-				<th scope="col">السعر</th>
-			</tr>
-		</thead>
-		<tbody class="table-group-divider">
-			@for(category of categories; track category.Standard){
-			<tr class="table-primary" (click)="editCategory(category)">
-				<td class="table-data">{{category.Name}}</td>
-				<td class="table-data">{{category.Standard}}</td>
-				<td class="table-data">{{category.Price}}</td>
-			</tr>
-			}
-		</tbody>
-	</table>
+	<div class="table-holder">
+		<table class="table-primary table table-hover table-striped table-bordered ">
+			<thead>
+				<tr class="border-top-0">
+					<th scope="col">الأسم</th>
+					<th scope="col">العيار</th>
+					<th scope="col">السعر</th>
+				</tr>
+			</thead>
+			<tbody class="table-group-divider overflow-y-scroll">
+				@for(category of categories; track category.Standard){
+				<tr (click)="editCategory(category)">
+					<td class="table-data">{{category.Name}}</td>
+					<td class="table-data">{{category.Standard}}</td>
+					<td class="table-data">{{category.Price}}</td>
+				</tr>
+				}
+			</tbody>
+		</table>
+	</div>
 </div>
