--- a/shop-front/src/app/components/modal/addnewcategory/addnewcategory.component.html
+++ b/shop-front/src/app/components/modal/addnewcategory/addnewcategory.component.html
@@ -10,8 +10,7 @@
 			</div>
 			}
 			<div class="d-flex justify-content-between align-items-center">
-				<button class="btn btn-primary" type="submit" [disabled]="newCategoryForm.invalid">إضافة عيار
-					جديد</button>
+				<button class="btn btn-primary" type="submit" [disabled]="newCategoryForm.invalid">إضافة</button>
 				<button class="btn btn-danger" type="button" (click)="onDismiss()">اغلاق الصفحة</button>
 			</div>
 
