--- a/shop-front/src/styles.css
+++ b/shop-front/src/styles.css
@@ -25,6 +25,12 @@ body {
 	width: 100%;
 }
 
+app-main-page {
+	display: block;
+	width: 100%;
+	height: 100%;
+}
+
 app-root {
 	display: flex;
 	flex-direction: column;
