- Added Edit/Delete Group

--- a/shop-front/src/app/components/categories-list/categories-list.component.html
+++ b/shop-front/src/app/components/categories-list/categories-list.component.html
@@ -17,7 +17,7 @@
 				<tr (click)="editCategory(category)">
 					<td class="table-data">{{category.Name}}</td>
 					<td class="table-data">{{category.Standard}}</td>
-					<td class="table-data">{{category.Price}}</td>
+					<td class="table-data">{{category.Price.toFixed(2)}}</td>
 				</tr>
 				}
 			</tbody>
