--- a/shop-front/src/app/components/modal/edit-group/edit-group.component.html
+++ b/shop-front/src/app/components/modal/edit-group/edit-group.component.html
@@ -22,7 +22,8 @@
 			}
 			<div class="d-flex justify-content-between align-items-center">
 				<button class="btn btn-primary" type="submit" [disabled]="newGroupForm.invalid">تعديل</button>
-				<button class="btn btn-danger" type="button" (click)="onDismiss()">اغلاق الصفحة</button>
+				<button class="btn btn-danger" type="button" (click)="onDelete()">الغاء المنتج</button>
+				<button class="btn btn-warning" type="button" (click)="onDismiss()">اغلاق الصفحة</button>
 			</div>
 
 		</form>
