- Added Basic SignUp

--- a/shop-front/src/app/components/modal/side-bar/side-bar.component.html
+++ b/shop-front/src/app/components/modal/side-bar/side-bar.component.html
@@ -6,8 +6,8 @@
 	</div>
 	<!-- User Data -->
 	<div class="user-info">
-		<h3>الاسم: {{"ديفيد جون"}}</h3>
-		<h3>الوظيفة: {{"مدير"}}</h3>
+		<h3>الاسم: {{name}}</h3>
+		<h3>الوظيفة: {{role}}</h3>
 	</div>
 	<!-- Navigation -->
 	<ul class="list-group list-group-flush w-100 pe-0">
