--- a/shop-front/src/app/components/main-page/main-page.component.html
+++ b/shop-front/src/app/components/main-page/main-page.component.html
@@ -10,6 +10,6 @@
 <div class="p-3 d-flex flex-column gap-3">
 	<app-basecategoryprice />
 	<div class="page-container d-flex flex-column w-100 flex-fill">
-		<router-outlet />
+		<router-outlet></router-outlet>
 	</div>
 </div>
