--- a/shop-front/src/app/components/modal/edit-group/edit-group.component.html
+++ b/shop-front/src/app/components/modal/edit-group/edit-group.component.html
@@ -22,9 +22,9 @@
 			}
 			<div class="d-flex justify-content-between align-items-center">
 				<button class="btn btn-primary" type="submit" [disabled]="newGroupForm.invalid">تعديل</button>
-				<button class="btn btn-danger" type="button" (click)="onDelete()">الغاء المحموعة</button>
 				<button class="btn btn-warning" type="button" (click)="onDismiss()">اغلاق الصفحة</button>
 			</div>
+			<button class="btn btn-danger w-100" type="button" (click)="onDelete()">الغاء المجموعة</button>
 
 		</form>
 	</div>
