--- a/shop-front/src/app/components/categories-list/categories-list.component.html
+++ b/shop-front/src/app/components/categories-list/categories-list.component.html
@@ -1,7 +1,8 @@
 <div class="card d-flex flex-column flex-fill gap-3 p-2">
 	<div class="title d-flex align-items-center justify-content-between w-100">قائمة العيارات
-		<button class="btn btn-info" [disabled]="categories.length===0" (click)="addNewCategory()">إضافة عيار
-			جديد</button>
+		@if(isEdible){<button class="btn btn-info" [disabled]="categories.length===0" (click)="addNewCategory()">إضافة
+			عيار
+			جديد</button>}
 	</div>
 	<div class="table-holder">
 		<table class="table-primary table table-hover table-striped table-bordered ">
@@ -14,7 +15,7 @@
 			</thead>
 			<tbody class="table-group-divider overflow-y-scroll">
 				@for(category of categories; track category.Standard){
-				<tr (click)="editCategory(category)">
+				<tr (click)="isEdible&&editCategory(category)">
 					<td class="table-data">{{category.Name}}</td>
 					<td class="table-data">{{category.Standard}}</td>
 					<td class="table-data">{{category.Price.toFixed(2)}}</td>
