- Created Custom Message
- Added Error Handling

--- a/shop-front/src/app/components/main-page/main-page.component.html
+++ b/shop-front/src/app/components/main-page/main-page.component.html
@@ -1,9 +1,8 @@
-<app-modal />
 <nav class="navbar navbar-dark bg-dark d-flex justify-content-between align-items-center px-3 py-2">
 	<div class="col-2">
-		<a class="navbar-brand me-0" href="#">محل الدهب</a>
+		<a class="navbar-brand me-0 brand" href="#">محل الدهب</a>
 	</div>
-	<button class="btn btn-outline-primary text-white h-100 py-0" (click)="showSideBar()">
+	<button class="btn btn-outline-primary text-white h-100 p-1 px-2" (click)="showSideBar()">
 		<i class="bi bi-list"></i>
 	</button>
 </nav>
