--- a/shop-front/src/app/components/products-list/products-list.component.html
+++ b/shop-front/src/app/components/products-list/products-list.component.html
@@ -18,7 +18,7 @@
 					<td class="table-data">{{product.name}}</td>
 					<td class="table-data">{{product.group.name}}</td>
 					@if(isEdible){<td class="table-data text-center">
-						<button class="btn btn-warning" (click)="editProduct(product, $event)">
+						<button class="btn btn-warning p-1 px-2" (click)="editProduct(product, $event)">
 							<i class="bi bi-pencil-square" style="font-size: 30px!important;"></i>
 						</button>
 					</td>}
