--- a/shop-front/src/app/components/basecategoryprice/basecategoryprice.component.html
+++ b/shop-front/src/app/components/basecategoryprice/basecategoryprice.component.html
@@ -5,7 +5,7 @@
 
 	@if(baseCategory != null){
 	<div class="d-flex align-items-center gap-3">
-		<span [style.width]="'fit-content'"> سعر عيار {{baseCategory.standard}} الحالي: </span>
+		<span [style.width]="'fit-content'"> سعر عيار {{baseCategory.standard}} الحالى: </span>
 		<input [readonly]="!isEdible" aria-label="base Price input" [(ngModel)]="baseCategoryPrice" type="number"
 			class="form-control" [style.flex]="1" />
 	</div>
