--- a/shop-front/src/app/components/password-strength-meter/password-strength-meter.component.css
+++ b/shop-front/src/app/components/password-strength-meter/password-strength-meter.component.css
@@ -1,7 +1,7 @@
 .meter {
-	height: 20px;
+	height: 1rem;
 	width: 100%;
-	border-radius: 20px;
+	border-radius: 1rem;
 	overflow: hidden;
 	background-color: rgb(255, 94, 0);
 }
