--- a/shop-front/src/styles.css
+++ b/shop-front/src/styles.css
@@ -9,20 +9,13 @@ body {
 * {
 	box-sizing: border-box;
 	font-weight: 700 !important;
-	font-size: 1.2rem !important;
+	font-size: 1rem !important;
 }
 
 .page-container>*:not(router-outlet) {
 	display: flex;
 	flex-direction: column;
 	height: 100%;
-}
-
-.page-container>*:not(router-outlet)>* {
-	height: min-content;
-	min-height: calc(59vh - 3rem - 65.75px);
-	max-height: calc(82vh - 3rem - 65.75px);
-	width: 100%;
 }
 
 app-main-page {
@@ -38,9 +31,14 @@ app-root {
 }
 
 i.bi {
-	font-size: 40px !important;
+	font-size: 2rem !important;
 }
 
 .alert {
-	font-size: 22px !important;
+	font-size: 1rem !important;
+	margin-bottom: 0;
+}
+
+:root {
+	--bs-body-bg: rgba(255, 255, 255, 0.2) !important;
 }
