- Added Gradient Card

--- a/shop-front/src/app/components/basecategoryprice/basecategoryprice.component.html
+++ b/shop-front/src/app/components/basecategoryprice/basecategoryprice.component.html
@@ -1,4 +1,4 @@
-<div class="card p-3 gap-3">
+<app-gradient-card>
 	@if (isLoading){
 	<app-loading />
 	} @else {
@@ -32,4 +32,4 @@
 
 	}
 
-</div>
+</app-gradient-card>
