--- a/shop-front/src/styles.css
+++ b/shop-front/src/styles.css
@@ -40,5 +40,5 @@ i.bi {
 }
 
 :root {
-	--bs-body-bg: rgba(255, 255, 255, 0.2) !important;
+	/* --bs-body-bg: rgba(255, 255, 255, 0.2) !important; */
 }
