--- a/shop-front/src/app/components/login/login.component.html
+++ b/shop-front/src/app/components/login/login.component.html
@@ -1,14 +1,16 @@
 <div class="main p-3 d-flex align-items-center justify-content-center gap-3">
-	<div class="card p-3">
-		<form class="d-flex flex-column gap-2" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-			@for(control of loginFormControlNames; track control.key){
-			<div class="d-flex align-items-center">
-				<label class="col-4" for="{{control.key}}"> {{control.displayName}} </label>
-				<input class="form-control" type="{{control.type}}" id="{{control.key}}"
-					formControlName="{{control.key}}" />
-			</div>
-			}
-			<button class="btn btn-primary" type="submit" [disabled]="loginForm.invalid">تسجيل الدخول</button>
-		</form>
-	</div>
+	<app-gradient-card>
+		<div class="card p-3">
+			<form class="d-flex flex-column gap-2" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+				@for(control of loginFormControlNames; track control.key){
+				<div class="d-flex align-items-center">
+					<label class="col-4" for="{{control.key}}"> {{control.displayName}} </label>
+					<input class="form-control" type="{{control.type}}" id="{{control.key}}"
+						formControlName="{{control.key}}" />
+				</div>
+				}
+				<button class="btn btn-primary" type="submit" [disabled]="loginForm.invalid">تسجيل الدخول</button>
+			</form>
+		</div>
+	</app-gradient-card>
 </div>
