- Removed Gradient Card

--- a/shop-front/src/app/components/basecategoryprice/basecategoryprice.component.html
+++ b/shop-front/src/app/components/basecategoryprice/basecategoryprice.component.html
@@ -1,4 +1,4 @@
-<app-gradient-card>
+<div class="card p-2 gap-3">
 	@if (isLoading){
 	<app-loading />
 	} @else {
@@ -32,4 +32,4 @@
 
 	}
 
-</app-gradient-card>
+</div>
